adjust margins avoiding that when expanding the sections overlap

--- a/src/scss/layout/_desings.scss
+++ b/src/scss/layout/_desings.scss
@@ -98,6 +98,9 @@
   @include tablet() {
     max-width: 329px;
   }
+  @include desktop() {
+    max-width: 0;
+  }
 }
 .colours-title {
   width: 62px;
