--- a/src/scss/layout/_share.scss
+++ b/src/scss/layout/_share.scss
@@ -1,11 +1,12 @@
 .share {
   &__fieldset {
     background-color: $white-two;
-    padding: 0 20px 20px 20px;
+    padding: 0 30px 20px 40px;
     border: none;
 
     @include tablet() {
-      padding:0 30px 10px 40px;
+      // Eliminamos el padding para evitar que se desajuste todo el contenedor principal al quitar el display
+      // padding:0 30px 10px 40px;
       max-width: 329px;
     }
   }
@@ -14,12 +15,11 @@
     display: flex;
     flex-direction: row;
     height: fit-content;
-    width: auto;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
     border-top: 1px solid #6b6b6b58;
     border-bottom: 1px solid #6b6b6b58;
-
 
     @include tablet() {
       max-width: 329px;
@@ -27,9 +27,6 @@
   }
   &__share {
     color: $dull-orange;
-  }
-
-  &__arrow {
   }
 
   &__legend {
@@ -41,8 +38,6 @@
     color: $gunmetal;
     width: 89%;
     text-align: left;
-
-
   }
   &__containerposition {
     display: grid;
@@ -53,7 +48,9 @@
   &__container {
     width: 199px;
     height: 50px;
-    margin: 20px 24px 30px 20px;
+    // Modifico el margen para evitar que se sobreponga al expandirlo
+    // margin: 20px 24px 30px 20px;
+    margin: 20px 0 30px 0;
     padding: 0 15px 0 15px;
     border-radius: 12px;
     box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
@@ -117,6 +114,8 @@
   color: $dull-orange;
   margin-bottom: 10px;
   text-decoration: none;
+  // Incluyo la alineacion del texto
+  text-align: center;
 }
 .share__twitter {
   font-size: 14px;
